# SARC2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
aux/Arvores_E_Circulos/: sarc_map.py
aux/neuralNet/: README.MD  ground_truth_erosion.py
aux/neuralNet/ground_truth_erosion/: ground_truth_erosion.py
aux/propeller_logs/: propeller_logs.ipynb
aux/propeller_logs/logs/: Plot_Name-uav1_rotor_2_joint0_velocity.csv  uav1_rotor_0_joint_0_full.csv  uav1_rotor_1_joint_0_full.csv  uav1_rotor_2_joint_0_full.csv  uav1_rotor_3_joint_0_full.csv
auxiliar/: configurações sarc.txt  session.yml
auxiliar/Arvores_E_Circulos/: instrucoes.txt
launch/: sarc.launch  sarc_mrs.launch
models/SARC_Green/: green_area.dae
models/SARC_Red/: red_area.dae
models/SARC_Yellow/: yellow_area.dae
models/SARccloseTree/: model.config  model.sdf
models/SARcfireTree/: model.config  model.sdf
models/SARckc/: colision.dae  model.config  model.sdf
models/SARclandArea/: land_area.dae  model.config  model.sdf
models/SARctree/: model.config  model.sdf
python/aux/: Moviment_Exemple.py  patrol_and_go.py
python/neuralNet/: README.MD  img_segmentation.py  main.py
python/uav/: Moviment_Exemple.py  helper.py  moviment2.py  patrol_and_go.py  swarm.py  teste_swarm.py  uav.py
scripts/: fall.py  sarc_map.py
src/swarm_package/: helper.py  run_swarm.py  swarm.py  uav.py
start/: .tmuxinator.yml
start/custom_configs/: odometry.yaml
start/pos/: pos1.yaml  pos2.yaml  pos3.yaml  pos4.yaml  pos5.yaml  posTest.yaml  posTest_1.yaml  posTest_2.yaml
worlds/: SARC.world
(+86 files in other folders)
